# jenkins-build-mcp

./: .env.example  .gitignore  PUBLISHING.md  README.md  mcp-config.example.json  pyproject.toml  services.company.example.yaml  services.example.yaml
examples/: AGENTS.snippet.md  chatgpt-remote.md  codex-config.toml.example  vscode-mcp.json
scripts/: local_smoke_test.py
src/jenkins_build_mcp/: __init__.py  config_loader.py  default_services.yaml  env_loader.py  errors.py  jenkins_client.py  models.py  server.py  service.py
tests/: test_config_loader.py  test_env_loader.py  test_jenkins_client.py  test_service.py
