[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "jenkins-build-mcp"
version = "0.2.0"
description = "MCP server for triggering Jenkins builds by service, site, and branch."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "OpenAI Codex" }
]
dependencies = [
  "httpx>=0.27.0,<1.0.0",
  "mcp[cli]>=1.26.0,<2.0.0",
  "PyYAML>=6.0.1,<7.0.0",
]

[project.optional-dependencies]
dev = [
  "build>=1.2.2,<2.0.0",
  "pytest>=8.3.0,<9.0.0",
]

[project.scripts]
jenkins-build-mcp = "jenkins_build_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/jenkins_build_mcp"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
